Very basic model setup for neoforge